// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignSubContractorTab should change view type 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="makeStyles-filterActionsContainer-1204 makeStyles-filterActionsContainerPadding-1206"
  >
    <div
      class="makeStyles-filterActionsContainerLeft-1205"
    >
      <div
        class="MuiBox-root MuiBox-root-1232 makeStyles-filterStatusContainer-1207 makeStyles-autocompleteFilterStatus-1224 makeStyles-leftFilter-1194"
      >
        <div
          class="makeStyles-floatingFilterWrapper-1213 makeStyles-filterWrapper-1212  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-1214"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-1222"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Roles
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-1216"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <hr
        class="MuiDivider-root makeStyles-dividerColor-1217 MuiDivider-flexItem MuiDivider-vertical"
      />
      <div
        class="MuiBox-root MuiBox-root-1233 makeStyles-filterStatusContainer-1207 makeStyles-leftFilterStatusContainer-1211 makeStyles-autocompleteFilterPosition-1094"
      >
        <div
          class="makeStyles-floatingFilterWrapper-1213 makeStyles-filterWrapper-1212 makeStyles-buttonContainer-1235 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-1214"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-1222"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Locations
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-1216"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-rightActionButtonsContainer-1225"
    >
      <div
        class="makeStyles-iconActionButtonsContainer-1226"
      >
        <svg
          class="makeStyles-iconButtonActive-1227"
          data-testid="list-view-btn"
          role="button"
        >
          list.svg
        </svg>
        <svg
          class="makeStyles-iconButtonInactive-1228"
          data-testid="hierarchy-view-btn"
          role="button"
        >
          hierarchy.svg
        </svg>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-1168 makeStyles-primaryButtonExtraLarge-1172 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="opensubcontractor-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign Subcontractor
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <table
    aria-label="client-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Role in Project
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Location
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Trades
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status in Project
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    />
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-1473"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-1474 makeStyles-close-1485 closed"
    data-testid="client-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-1475 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-1477"
      >
        <div
          class="makeStyles-drawerButton-1478"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-1476"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-1479 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Client Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-1504"
      >
        <div
          class="makeStyles-company-1505"
        >
          <div
            class="makeStyles-drawerText-1481"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-1506 makeStyles-entityTitle-1503 MuiTypography-body1"
            />
            <div
              class="makeStyles-drawerMainText-1482"
            >
              <span>
                -
              </span>
              <span>
                -
              </span>
              <span />
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-1480"
          >
            <svg>
              location.svg
            </svg>
            <div
              class="makeStyles-drawerText-1481 makeStyles-drawerTextSeparation-1483"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-1516  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-1516  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-1480"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-1481 makeStyles-drawerTextSeparation-1483"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-1516  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-1516  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-1480"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-1481 makeStyles-drawerTextSeparation-1483"
            >
              <span
                class="makeStyles-listAccent-1506"
              >
                -
              </span>
              <span>
                -
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-ctaWrapper-1507"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AssignSubContractorTab should open modal 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="makeStyles-filterActionsContainer-478 makeStyles-filterActionsContainerPadding-480"
  >
    <div
      class="makeStyles-filterActionsContainerLeft-479"
    >
      <div
        class="MuiBox-root MuiBox-root-506 makeStyles-filterStatusContainer-481 makeStyles-autocompleteFilterStatus-498 makeStyles-leftFilter-468"
      >
        <div
          class="makeStyles-floatingFilterWrapper-487 makeStyles-filterWrapper-486  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-488"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-496"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Roles
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-490"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <hr
        class="MuiDivider-root makeStyles-dividerColor-491 MuiDivider-flexItem MuiDivider-vertical"
      />
      <div
        class="MuiBox-root MuiBox-root-507 makeStyles-filterStatusContainer-481 makeStyles-leftFilterStatusContainer-485 makeStyles-autocompleteFilterPosition-368"
      >
        <div
          class="makeStyles-floatingFilterWrapper-487 makeStyles-filterWrapper-486 makeStyles-buttonContainer-509 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-488"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-496"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Locations
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-490"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-rightActionButtonsContainer-499"
    >
      <div
        class="makeStyles-iconActionButtonsContainer-500"
      >
        <svg
          class="makeStyles-iconButtonActive-501"
          data-testid="list-view-btn"
          role="button"
        >
          list.svg
        </svg>
        <svg
          class="makeStyles-iconButtonInactive-502"
          data-testid="hierarchy-view-btn"
          role="button"
        >
          hierarchy.svg
        </svg>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-442 makeStyles-primaryButtonExtraLarge-446 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="opensubcontractor-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign Subcontractor
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <table
    aria-label="client-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Role in Project
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Location
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Trades
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status in Project
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    />
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-550"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-551 makeStyles-close-562 closed"
    data-testid="client-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-552 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-554"
      >
        <div
          class="makeStyles-drawerButton-555"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-553"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-556 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Client Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-581"
      >
        <div
          class="makeStyles-company-582"
        >
          <div
            class="makeStyles-drawerText-558"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-583 makeStyles-entityTitle-580 MuiTypography-body1"
            />
            <div
              class="makeStyles-drawerMainText-559"
            >
              <span>
                -
              </span>
              <span>
                -
              </span>
              <span />
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-557"
          >
            <svg>
              location.svg
            </svg>
            <div
              class="makeStyles-drawerText-558 makeStyles-drawerTextSeparation-560"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-593  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-593  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-557"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-558 makeStyles-drawerTextSeparation-560"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-593  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-593  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-557"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-558 makeStyles-drawerTextSeparation-560"
            >
              <span
                class="makeStyles-listAccent-583"
              >
                -
              </span>
              <span>
                -
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-ctaWrapper-584"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AssignSubContractorTab should render 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="makeStyles-filterActionsContainer-115 makeStyles-filterActionsContainerPadding-117"
  >
    <div
      class="makeStyles-filterActionsContainerLeft-116"
    >
      <div
        class="MuiBox-root MuiBox-root-143 makeStyles-filterStatusContainer-118 makeStyles-autocompleteFilterStatus-135 makeStyles-leftFilter-105"
      >
        <div
          class="makeStyles-floatingFilterWrapper-124 makeStyles-filterWrapper-123  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-125"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-133"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Roles
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-127"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <hr
        class="MuiDivider-root makeStyles-dividerColor-128 MuiDivider-flexItem MuiDivider-vertical"
      />
      <div
        class="MuiBox-root MuiBox-root-144 makeStyles-filterStatusContainer-118 makeStyles-leftFilterStatusContainer-122 makeStyles-autocompleteFilterPosition-5"
      >
        <div
          class="makeStyles-floatingFilterWrapper-124 makeStyles-filterWrapper-123 makeStyles-buttonContainer-146 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-125"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-133"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Locations
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-127"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-rightActionButtonsContainer-136"
    >
      <div
        class="makeStyles-iconActionButtonsContainer-137"
      >
        <svg
          class="makeStyles-iconButtonActive-138"
          data-testid="list-view-btn"
          role="button"
        >
          list.svg
        </svg>
        <svg
          class="makeStyles-iconButtonInactive-139"
          data-testid="hierarchy-view-btn"
          role="button"
        >
          hierarchy.svg
        </svg>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-79 makeStyles-primaryButtonExtraLarge-83 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="opensubcontractor-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign Subcontractor
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <table
    aria-label="client-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Role in Project
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Location
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Trades
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status in Project
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    />
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-187"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-188 makeStyles-close-199 closed"
    data-testid="client-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-189 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-191"
      >
        <div
          class="makeStyles-drawerButton-192"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-190"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-193 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Client Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-218"
      >
        <div
          class="makeStyles-company-219"
        >
          <div
            class="makeStyles-drawerText-195"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-220 makeStyles-entityTitle-217 MuiTypography-body1"
            />
            <div
              class="makeStyles-drawerMainText-196"
            >
              <span>
                -
              </span>
              <span>
                -
              </span>
              <span />
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-194"
          >
            <svg>
              location.svg
            </svg>
            <div
              class="makeStyles-drawerText-195 makeStyles-drawerTextSeparation-197"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-230  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-230  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-194"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-195 makeStyles-drawerTextSeparation-197"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-230  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-230  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-194"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-195 makeStyles-drawerTextSeparation-197"
            >
              <span
                class="makeStyles-listAccent-220"
              >
                -
              </span>
              <span>
                -
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-ctaWrapper-221"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AssignSubContractorTab should unmount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
